# composerstoolkitv2

./: .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt  run_tests.bat  setup.py
examples/: 10_chord_scales.py  11_axis_based_progression.py  12_random_harmony.py  13_map_tonalities.py  14_filtered_noise.py  15_random_parameter_mutation.py  16_variations.py  17_markov_revisisted.py  18_evolutionary.py  19_case_based_reasoning.py  1_random_slicing.py  20_analysis.py  21_notation.py  22_set_intersections.py  23_canon_solver.py  24_quartet.py  25_duo.py  26_vocal_polyphony.py  27_shapers.py  28_trumpet_and_strings.py  29_context_generators.py  2_batched_and_gated_transformers.py  30_ambient_synth_landscape.py  30_vocals2.py  31_midi_gates.py  32_midi_sampler.py  33_dynamic_properties.py  35_serial_composition.py  36_time_points.py  37_tintinnabulation.py  38_regeneration.py  39_probability_matrix.py  3_compose_sequence.py  40_dynamics.py  41_swells.py  42_curved_melody.py  43_intervalic_tension.py  44_riemannian.py  45_pulse_labyrinth.py  46_pitch_set_routes.py  (+8 more)
examples/34_autoreloading_eg/: main.py  track1.py
src/composerstoolkit/: __init__.py  core.py
src/composerstoolkit/analysis/: __init__.py  mining.py  statistical.py
src/composerstoolkit/builder/: generators.py  (+2 more)
tests/: __main__.py  c_major_chord.MID  c_major_chord_arpeggiated.MID  chor001.mid  iv_i_suspension.MID  simple_V7-I-dyads.MID  simple_i-iv.MID  testanalysistools.py  testbuilders.py  testcore.py  testgenerators.py  testmodule.py  testresources.py  testsolvers.py  unconnected_pitches.MID
(+40 files in other folders)
