[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "composerstoolkit"
version = "0.0.1"
authors = [
	{name="Nick Peck"},
]
description = "A suite of tools to assist and enrich the process of musical composition"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/nickpeck/composerstoolkitv2"
